Simplyfied implementation of methods